# multi-modal-rag

./: .env.example  .gitignore  Docker_Compose_Testing.md  Dockerfile  Dockerfile.gpu  LIGHTNING_AI_DEPLOY.md  Qwen_testing.md  README.md  app-task-def.json  app.py  cicd-policy.json  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
docs/: AWS_ARCHITECTURE_EXPLAINER.md  DEBUGGING_RUNBOOK.md  FUTURE_IMPROVEMENTS.md  LOCAL_DEPLOYMENT.md  STEP_BY_STEP_DEPLOY.md  SUBNET_ARCHITECTURE.md  multi-az-subnet-architecture.drawio
docs/superpowers/specs/: 2026-04-01-qwen-multimodal-rag-design.md
notebooks/: 01_quickstart.ipynb
ollama/: README.md  config.docker.yaml  visualize.py
scripts/: debug_raw.py  warmup.py
src/doc_parser/: chunker.py  config.py  logging_config.py  pipeline.py
src/doc_parser/api/: app.py  dependencies.py  schemas.py
src/doc_parser/api/routes/: generate.py  health.py  ingest.py
src/doc_parser/ingestion/: embedder.py  image_captioner.py  vector_store.py
src/doc_parser/retrieval/: reranker.py
src/doc_parser/utils/: pdf_utils.py
tests/unit/: test_api_schemas.py  test_embedder.py  test_generate.py  test_image_captioner.py  test_reranker.py  test_vector_store.py
